Updated project with latest changes

--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
     </section>
     <!--End of hero section-->
     <!--Latest Episode-->
-    <section class="section-center episode-center">
-      <!--Begining of first episode-->
+
       <div class="episode-title">
         <div class="episode-title-line"></div>
         <h1>The Latest Episodes</h1>
       </div>
+    <section class="section-center episode-center">
+      <!--Begining of first episode-->
       <!--Begining of first episode-->
       <div class="epsiode-banner-container">
         <div class="episode-img-container">
@@ -195,8 +196,15 @@
         </div>
       </div>
      </div>
-     <!-- End of old episodes -->
     </section>
+         <!-- End of old episodes -->
+          <div class="section-center load-btn-center">
+         <div class="nav-btn-container load-container ">
+          <button class="btn load-btn" type="button">Load more Episodes</button>
+        </div>
+      </div>
+       
+    
     <!--End of latest Episode-->
     <!-- Javascript -->
     <script src="/js/app.js"></script>
