Updated project with latest changes

--- a/index.html
+++ b/index.html
@@ -258,13 +258,54 @@
             </svg>
             <p>Audiomack</p>
           </div>
-        </div>
- 
-        
+        </div>  
       </div>
       </section>
      </section>
     <!-- End of platforms -->
+     <!-- The Gurardian -->
+      <section class="section-center guardian-center">
+        <div class="guardian-container">
+          <div class="episode-title">
+            <div class="episode-title-line"></div>
+            <h1>The The Guardians </h1>
+          </div>
+          <div class="guardian-content">
+            <div class="guardian-img-container">
+              <img src="/images/the-guardian/Guardian1.png" alt="">
+              <div class="guardian-id">
+                <h3>Joseph Turbo</h3>
+                <p>Host</p>
+              </div>
+            </div>
+            <div class="guardian-img-container">
+              <img src="/images/the-guardian/Guardian2.png" alt="">
+              <div class="guardian-id">
+                <h3>Jenna Welsh</h3>
+                <p>Host</p>
+              </div>
+            </div>
+            <div class="guardian-img-container">
+              <img src="/images/the-guardian/Guardian3.png" alt="">
+              <div class="guardian-id">
+                <h3>Tony Montana</h3>
+                <p>Host</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="guardian-comment">
+        <div class="guardian-comment-img">
+          <!-- <img src="/images/the-guardian/guardian4.png" alt="" class="g-img1">
+          <img src="/images/the-guardian/guardian5.png" alt="" class="g-img2"> -->
+         <div class="guardian-c-text">
+          <p>“Overall, the Adulting Avenue podcast is for anyone who is navigating the challenges, opportunities, and adventures of adulthood and is looking for valuable insights, practical advice, and a supportive community to help them thrive in every aspect of their adult life.”</p>
+          <h3>Joshua Millier</h3>
+        </div>
+        </div>
+      </section>
+      <!-- End of the guardian -->
     <!-- Javascript -->
     <script src="/js/app.js"></script>
   </body>
