Updated project with latest changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>3amwithabdul</title>
     
     <link rel="stylesheet" href="./css/style.css" />
     <link
@@ -347,6 +347,38 @@
           </div>
         </section>
         <!-- End of level up -->
+         <!-- Start of guest -->
+          <section class="guest-center">
+            <div class="guest-container">
+              <div class="episode-title guest-tittle">
+                <div class="guest-left">
+                <div class="episode-title-line"></div>
+                <h1>Renowened Guests</h1>
+              </div>
+              <div class="arrow-container">
+                <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect x="55.5" y="55.5" width="55" height="55" rx="27.5" transform="rotate(-180 55.5 55.5)" stroke="#AAB91E" />
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M35 20.1429L21.3696 28L35 35.8571L33.3478 38L16 28L33.3478 18L35 20.1429Z" fill="#AAB91E" />
+                </svg>
+                <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <rect x="0.5" y="0.5" width="55" height="55" rx="27.5" stroke="#AAB91E" />
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M21 35.8571L34.6304 28L21 20.1429L22.6522 18L40 28L22.6522 38L21 35.8571Z" fill="#AAB91E" />
+                </svg>
+              </div>
+              </div>
+              
+              <div class="max-img-container">
+                <div class="img-container-1">
+                  <img src="/images/episode-images/Guest1.png" alt="">
+                  <div class="guest-id">
+                  <h3>Johnny Walker</h3>
+                  <p>Musician</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- End of guest -->
     <!-- Javascript -->
     <script src="/js/app.js"></script>
   </body>
