Updated project with latest changes

--- a/index.html
+++ b/index.html
@@ -379,6 +379,53 @@
             </div>
           </section>
           <!-- End of guest -->
+           <!-- Newsletter Section -->
+            <section class=" news-center">
+              <div class="news-container section-center">
+                <div class="news-content">
+                  <div class="news-title">
+                    <div class="news-line"></div>
+                    <h1>Stay Ahead, Stay Informed</h1>
+                  </div>
+                  <p class="news-p1">Our newsletter is packed with insights, inspiration, and expert advice, it's the ultimate tool for leveling up your life. 
+                    Don't miss out – sign up today!</p>
+                    <form action="" class="news-form">
+                      <input type="email" placeholder="Enter your email" class="news-email">
+                      <input type="submit" class="btn news-btn">
+                    </form>
+                    <p class="news-p2">By clicking Sign Up you're confirming that you agree 
+                      with our <a href="" class="news-terms">Terms and Conditions.</a></p>
+                </div>
+              </div>
+            </section>
+          <!-- End of newsletter section -->
+           <!-- Footer Section -->
+            <div class="section-center footer-center">
+            <div class="footer-container">
+              <div class="footer footer-1">
+                <p>Partner with us!</p>
+                <h1>Project@aa.com</h1>
+              </div>
+              <div class="footer footer-2">
+                <p>Join us!</p>
+                <h1>Careers@aa.com</h1>
+              </div>
+              <div class="footer footer-3">
+                <p>Visit us!</p>
+                <h1>Greyson Lane 62 12-648 
+                  Wortund, Palarni.</h1>
+              </div>
+              
+            </div>
+            <div class="footer-bottom">
+
+              <div class="nav-logo footer-logo">
+                <img src="images/logo/ADULTING AVENUE.png" alt="logo" />
+              </div>
+              <p>Privacy Policy</p>
+            </div>
+            </div>
+            <!-- End of footer -->
     <!-- Javascript -->
     <script src="/js/app.js"></script>
   </body>
