--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!--Side bar -->
 
         <ul class="nav-links">
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Partnerships</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -83,7 +83,7 @@
       <!-- aside body -->
       <div class="aside-body">
         <ul class="aside-links">
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Partnerships</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
