--- a/about.html
+++ b/about.html
@@ -148,6 +148,42 @@
         </div></div>
     </section>
      <!-- End of our guiding principle -->
+    <!-- Fact about  -->
+     <section class="section-center fact-center">
+        <div class="episode-title fact-title">
+            <div class="episode-title-line fact-line"></div>
+            <h1> Facts About us</h1>
+        </div>
+        <div class="fact-container">
+            <div class="fact-cards f-card1">
+                <h3>Values</h3>
+                <p>Our core values shape everything we do at Adulting Avenue. We believe in authenticity, empathy, inclusivity, and continuous growth. We are committed to providing a safe and supportive space where individuals can share their experiences, ask questions, and learn from one another without judgment or discrimination.</p>
+            </div>
+            <div class="fact-cards f-card2">
+                <h3>Community Focus</h3>
+                <p>We believe in the power of community and the importance of connection in the journey of adulting. 
+                    That's why we've built a vibrant and
+                    supportive community of like-minded 
+                    individuals who are all navigating the adventure of adulthood together. </p>
+            </div>
+            <div class="fact-cards f-card3">
+                <h3>Transperacy and Authenticity</h3>
+                <p>We believe in transparency and authenticity
+                    in all our interactions. We're committed to
+                   being honest, genuine, and relatable in our
+                   content and communications. Whether 
+                   we're sharing personal anecdotes, 
+                   interviewing experts, or partnering with
+                   brands, you can trust that we'll always keep
+                   it real and stay true to ourselves and our 
+                   audience.</p>
+            </div>
+            <div class="fact-img-container f-card4">
+                <img src="images/header-image/Frame 27083.png" alt="">
+            </div>
+        </div>
+     </section>
+    <!-- End of fact about -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
         <div class="footer-container">
