--- a/about.html
+++ b/about.html
@@ -184,6 +184,58 @@
         </div>
      </section>
     <!-- End of fact about -->
+    <!-- Impact  -->
+     <section class="section-center impact-center">
+      <div class="episode-title fact-title">
+            <div class="episode-title-line fact-line"></div>
+            <h1> Our Impact </h1>
+        </div>
+      <div class="impact-container">
+        <div class="impact-card i-card1">
+          <h3>Sit lacinia tempus at elit pellentesque posuere. Eget et suspendisse risus mi quis consequat enim a.</h3>
+        </div>
+        <div class="impact-card i-card2">
+          <h3>50.3k</h3>
+          <h5>Organic Reach</h5>
+        </div>
+        <div class="impact-card i-card2 i-card3">
+          <h3>412.8k</h3>
+          <h5>Active users</h5>
+        </div>
+        <div class="impact-card i-card1 i-card4">
+          <h3>Mauris nunc ultricies urna diam porta non fusce in posuere. Est eu in ac velit etiam enim enim.</h3>
+        </div>
+         <div class="impact-card i-card5">
+                <h3>Transperacy and Authenticity</h3>
+                <p>We believe in transparency and authenticity
+                    in all our interactions. We're committed to
+                   being honest, genuine, and relatable in our
+                   content and communications. Whether 
+                   we're sharing personal anecdotes, 
+                   interviewing experts, or partnering with
+                   brands, you can trust that we'll always keep
+                   it real and stay true to ourselves and our 
+                   audience.</p>
+            </div>
+      </div>
+     </section>
+    <!-- End of impact -->
+    <!-- partnership Section -->
+     <section class="guiding-cenpartner">
+        <div class="guiding-container">
+            <div class="guiding-img-container">
+                <img src="images/header-image/Frame 1000004962.png" alt="">
+            </div>
+            <div class="guiding-steps"> 
+                <div class="partner-title partner-title">
+            <div class="partner-title-line partner-line"></div>
+            <h1> Our Guiding principle</h1>
+          </div>
+            </div>
+        </div></div>
+    </section>
+     <!-- End of our guiding principle -->
+    <!-- End of partnership -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
         <div class="footer-container">
