--- a/about.html
+++ b/about.html
@@ -223,19 +223,50 @@
     <!-- partnership Section -->
      <section class="guiding-cenpartner">
         <div class="guiding-container">
-            <div class="guiding-img-container">
+            <div class="guiding-img-container partner-img-container">
                 <img src="images/header-image/Frame 1000004962.png" alt="">
+                <!-- <img src="images/header-image/Frame 1000004963.png" alt="" class="p-img-2"> -->
             </div>
-            <div class="guiding-steps"> 
-                <div class="partner-title partner-title">
+            <div class="partner-text-area"> 
+              <div>
+                <div class="partner-title">
             <div class="partner-title-line partner-line"></div>
-            <h1> Our Guiding principle</h1>
+            <h1> Partnerships and Sponsorship</h1>
+          </div>
+          <div class="partner-text">
+            <p>Get in touch with our Sales and support team to get your questions answered  Get in touch with our Sales and support team to get your questions answered </p>
+          <div class="nav-btn-container">
+          <button class="btn partner-btn" type="button">Partner with us</button>
+        </div>
           </div>
             </div>
-        </div></div>
+            </div>
+      </div>
     </section>
-     <!-- End of our guiding principle -->
     <!-- End of partnership -->
+    <!-- FAQ -->
+     <section class="faq-center">
+      <div class="faq-background">
+      <div class="faq-container ">
+        <div class="faq-title">
+            <div class="faq-line"></div>
+            <h1 class="faq-title-h1"> Frequently asked questions</h1>
+            <p class="faq-title-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+      </div>
+      </div>
+     </section>
+    <!-- End FAQ -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
         <div class="footer-container">
