--- a/about.html
+++ b/about.html
@@ -253,20 +253,73 @@
             <h1 class="faq-title-h1"> Frequently asked questions</h1>
             <p class="faq-title-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
+        <div class="faq-q-container">
         <div class="faq-question faq1">
           <div class="faq-question-title">
             <h3>Question goes here</h3>
-            <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
   <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
 </svg>
           </div>
           <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
 consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
         </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+        </div>
       </div>
       </div>
      </section>
     <!-- End FAQ -->
+     <!-- Share Experience -->
+      <section class="share-center section-center">
+        <div class="share-container">
+          
+        </div>
+      </section>
+    <!-- End of share experience  -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
         <div class="footer-container">
@@ -296,5 +349,6 @@ consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique
     <!-- End of footer -->
 <!-- Javascript -->
 <script src="/js/app.js"></script>
+<script src="/js/about.js"></script>
 </body>
 </html>
