--- a/about.html
+++ b/about.html
@@ -314,11 +314,24 @@ consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique
      </section>
     <!-- End FAQ -->
      <!-- Share Experience -->
-      <section class="share-center section-center">
-        <div class="share-container">
-          
+    <section class="share-center">
+      <div class="share-background">
+        <div class="faq-title">
+            <div class="faq-line"></div>
+            <p class="share-title-p1">Share your experience</p>
+            <h1 class="faq-title-h1"> Be our guest on the show!</h1>
+            <p class="faq-title-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="nav-btn-container">
+          <button class="btn share-btn" type="button">Contact us</button>
         </div>
-      </section>
+        </div>
+        <div class="share-right">
+          <div class="c-us">
+            <h2>Contact Us</h2>
+          </div>
+        </div>
+      </div>
+     </section>
     <!-- End of share experience  -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
