--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="aside-body">
         <ul class="aside-links">
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Partnerships</a></li>
+          <li><a href="partnership.html">Partnerships</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
