--- a/about.html
+++ b/about.html
@@ -57,8 +57,8 @@
         <!--Side bar -->
 
         <ul class="nav-links">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Partnerships</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="partnership.html">Partnerships</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
         <div class="nav-btn-container">
