--- a/partnership.html
+++ b/partnership.html
@@ -154,6 +154,46 @@
         </div></div>
     </section>
      <!-- End of our guiding principle -->
+    <!-- Visit -->
+     <section class="visit-center">
+        <div class="visit-max-container">
+        <div class="episode-title about-title">
+            <div class="episode-title-line about-line"></div>
+            <h1> Visit our previous seasons</h1>
+          </div>
+        <div class="visit-container">
+            <div class="visit-c1">
+                <div class="visit-c-img">
+                    <img src="./images/header-image/Visit2.png" alt="">
+                </div>
+                <p>The 18 Series</p>
+                <h3>Season 1</h3>
+            </div>
+            <div class="visit-c1">
+                <div class="visit-c-img">
+                    <img src="./images/header-image/Frame 1000004962 (1).png" alt="">
+                </div>
+                <p>Navigating Your Finances</p>
+                <h3>Season 2</h3>
+            </div>
+            <div class="visit-c1">
+                <div class="visit-c-img">
+                    <img src="./images/header-image/Frame 1000004962 (2).png" alt="">
+                </div>
+                <p>Navigating professional Life</p>
+                <h3>Season 3</h3>
+            </div>
+            <div class="visit-c1">
+                <div class="visit-c-img">
+                    <img src="./images/header-image/Viait1.png" alt="">
+                </div>
+                <p>Love and Family</p>
+                <h3>Season 4</h3>
+            </div>
+        </div>
+        </div>
+     </section>
+     <!-- End of visit -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
         <div class="footer-container">
