--- a/partnership.html
+++ b/partnership.html
@@ -194,6 +194,23 @@
         </div>
      </section>
      <!-- End of visit -->
+    <!-- Myth -->
+     <section class="section-center myth-center">
+        <div class="myth-max-container">
+            <div class="myth-title fact-title">
+                <div class="episode-title-line fact-line"></div>
+                <h1> What guests talk about </h1>
+                <p>Adulting Myths</p>
+            </div>
+            <div class="myth-item-container">
+                <div class="myths-item1">
+                    <h3>Job Hunting</h3>
+                </div>
+            </div>
+            
+        </div>
+     </section>
+    <!-- End of myth section -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
         <div class="footer-container">
@@ -222,7 +239,8 @@
     </div>
     <!-- End of footer -->
 <!-- Javascript -->
-<script src="/js/app.js"></script>
-<script src="/js/about.js"></script>
+
+<script src="/js/partner.js"></script>
+<!-- <script src="/js/about.js"></script> -->
 </body>
 </html>
