--- a/partnership.html
+++ b/partnership.html
@@ -206,11 +206,159 @@
                 <div class="myths-item1">
                     <h3>Job Hunting</h3>
                 </div>
-            </div>
-            
+            </div>     
         </div>
      </section>
     <!-- End of myth section -->
+     <!-- Recording -->
+     <section class="section-center record-center">
+        <div class="record-max-container">
+            <div class="myth-title fact-title">
+                <div class="episode-title-line fact-line"></div>
+                <h1> Recording your part is easy </h1>
+            </div>
+            <div class="record-mmax-container">
+            <!-- <div class="record-container">
+            <div class="circle-dashed-line-container">
+                <div class="grey-circle"></div>
+                <div class="record-dashed-line"></div>   
+            </div> 
+            <div class="record-item-text">
+                <h4>Step 1</h4>
+                <h3>Step Name</h3>
+                <p>Get in touch with our Sales and support team to get your questions answered Get in touch with our Sales and support team to get your questions answered </p>
+            </div>
+            
+        </div> -->
+        </div>
+        </div>
+     </section>
+    <!-- End of record section -->
+        <!-- FAQ -->
+     <section class="faq-center">
+      <div class="faq-background">
+      <div class="faq-container ">
+        <div class="faq-title">
+            <div class="faq-line"></div>
+            <h1 class="faq-title-h1"> Frequently asked questions</h1>
+            <p class="faq-title-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="faq-q-container">
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+
+        <div class="faq-question faq1">
+          <div class="faq-question-title">
+            <h3>Question goes here</h3>
+            <svg width="14" height="14" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg" class="faq-btn">
+  <path d="M18.8346 9.00004V9.66664C18.8346 10.0348 18.5362 10.3333 18.168 10.3333H10.5013V18C10.5013 18.3681 10.2028 18.6666 9.8346 18.6666H9.168C8.7998 18.6666 8.5013 18.3681 8.5013 18V10.3333H0.834639C0.466449 10.3333 0.167969 10.0348 0.167969 9.66664V9.00004C0.167969 8.63184 0.466449 8.33334 0.834639 8.33334H8.5013V0.66666C8.5013 0.29847 8.7998 0 9.168 0H9.8346C10.2028 0 10.5013 0.29847 10.5013 0.66666V8.33334H18.168C18.5362 8.33334 18.8346 8.63184 18.8346 9.00004Z" fill="#AAB91E" />
+</svg>
+          </div>
+          <p class="faq-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Lorem ipsum dolor sit amet,
+consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
+        </div>
+      </div>
+      </div>
+     </section>
+    <!-- End FAQ -->
+     <!-- Gallery Section -->
+      <div class="gallery-center">
+        <div class="gallery-container">
+            <div class="gallery-img container g1">
+                <img src="./images/header-image/gallery7.png" alt="">
+            </div>
+            <div class="gallery-img container g2">
+                <img src="./images/header-image/gallery8.png" alt="">
+            </div>
+            <div class="gallery-img container g3">
+                <img src="./images/header-image/gallery9.png" alt="">
+            </div>
+            <div class="gallery-img container g4">
+                <img src="./images/header-image/gallery8.png" alt="">
+            </div>
+            <div class="gallery-img container g5">
+                <img src="./images/header-image/gallery7.png" alt="">
+            </div>
+            <div class="gallery-img container g6">
+                <img src="./images/header-image/gallery9.png" alt="">
+            </div>
+            <div class="gallery-img container g7">
+                <img src="./images/header-image/gallery7.png" alt="">
+            </div>
+            <div class="gallery-img container g8">
+                <img src="./images/header-image/gallery8.png" alt="">
+            </div>
+            <div class="gallery-img container g9">
+                <img src="./images/header-image/gallery9.png" alt="">
+            </div>
+            <div class="gallery-img container g10">
+                <img src="./images/header-image/gallery8.png" alt="">
+            </div>
+        </div>
+      </div>
+    <!-- End of gallery section -->
+    <!-- Share Experience -->
+    <section class="share-center">
+      <div class="share-background">
+        <div class="faq-title">
+            <div class="faq-line"></div>
+            <p class="share-title-p1">Share your experience</p>
+            <h1 class="faq-title-h1"> Be our guest on the show!</h1>
+            <p class="faq-title-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="nav-btn-container">
+          <button class="btn share-btn" type="button">Contact us</button>
+        </div>
+        </div>
+        <div class="share-right">
+          <div class="c-us">
+            <h2>Contact Us</h2>
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- End of share experience  -->
     <!-- Footer Section -->
     <div class="section-center footer-center">
         <div class="footer-container">
