--- a/about.html
+++ b/about.html
@@ -83,9 +83,9 @@
       <!-- aside body -->
       <div class="aside-body">
         <ul class="aside-links">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Partnerships</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="partnership.html">Partnerships</a></li>
+          <li><a href="contatc.html">Contact</a></li>
         </ul>
       </div>
     </aside>
